# mev-gas-optimization

./: .env  .gitignore  Cargo.toml  README.md  foundry.toml
bytecode/: BundleExecutor-huff.hex  BundleExecutor-yul.hex  YulExecutor.hex
contracts/: BundleExecutor-after.sol  BundleExecutor-before.sol  BundleExecutor-yulsol.sol  BundleExecutor.huff  BundleExecutor.yul  shared.sol
src/: BundleExecutor-after.sol  BundleExecutor-before.sol  BundleExecutor-yul.sol  BundleExecutor.yul  executor_after.rs  executor_before.rs  executor_huff.rs  executor_yul.rs  executor_yulsol.rs  shared.sol
src/abi/: bundle-executor-after.json  bundle-executor-before.json
src/source/: actors.rs  anvil_utils.rs  mod.rs  utils.rs
test/: BundleExecutor-after.t.sol  BundleExecutor-before.t.sol  BundleExecutor-yul.t.sol  BundleExecutor-yulsol.t.sol  BytecodeDeployer.sol  shared.sol
